Fix spacing and make text bold.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,6 +10,7 @@ body {
   margin: 0px;
   font-family: Helvetica;
   font-size: 22px;
+  font-weight: bold;
   color: seashell;
   background-color: black;
   opacity: 0.9;
@@ -48,7 +49,7 @@ nav a {
 }
 
 nav span {
-  padding-left: 20px;
+  padding-left: 10px;
   padding-right: 10px;
 }
 
@@ -98,11 +99,6 @@ nav span {
   display: block;
 }
 
-.tea span {
-  display: block;
-  padding: 5px;
-}
-
 /* Locations */
 #locations {
   width: 1200px;
@@ -123,7 +119,6 @@ nav span {
   margin: 5px 20px;
   background-color: black;
   opacity: 1;
-  padding: 10px;
   display: flex;
   flex-direction: column;
 }
